--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "17862add",
+   "id": "cc9ee08a",
    "metadata": {},
    "source": [
     "# cjm-transcript-review\n",
@@ -12,10 +12,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0f032989",
+   "id": "6cf7e0de",
    "metadata": {},
    "source": [
-    "## Install latest from the GitHub [repository][repo]:\n",
+    "## Install\n",
     "\n",
     "```bash\n",
     "pip install cjm_transcript_review\n",
@@ -25,7 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "421fa8c9",
+   "id": "b5e82313",
    "metadata": {},
    "outputs": [],
    "source": []
