--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "cc9ee08a",
+   "id": "3bc9d5ca",
    "metadata": {},
    "source": [
     "# cjm-transcript-review\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6cf7e0de",
+   "id": "7b9aa9d3",
    "metadata": {},
    "source": [
     "## Install\n",
@@ -23,12 +23,211 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b5e82313",
+   "cell_type": "markdown",
+   "id": "f3a3fbc6",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Project Structure\n",
+    "\n",
+    "```\n",
+    "nbs/\n",
+    "├── services/ (1)\n",
+    "│   └── graph.ipynb  # Graph service for committing documents and segments to the context graph\n",
+    "├── html_ids.ipynb  # HTML ID constants for Phase 3: Review & Commit\n",
+    "└── models.ipynb    # Review step state and working document model for Phase 3: Review & Commit\n",
+    "```\n",
+    "\n",
+    "Total: 3 notebooks across 1 directory"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e69dc9c5",
+   "metadata": {},
+   "source": [
+    "## Module Dependencies\n",
+    "\n",
+    "```mermaid\n",
+    "graph LR\n",
+    "    html_ids[html_ids<br/>html_ids]\n",
+    "    models[models<br/>models]\n",
+    "    services_graph[services.graph<br/>graph]\n",
+    "\n",
+    "```\n",
+    "\n",
+    "No cross-module dependencies detected."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "945450be",
+   "metadata": {},
+   "source": [
+    "## CLI Reference\n",
+    "\n",
+    "No CLI commands found in this project."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0d57162e",
+   "metadata": {},
+   "source": [
+    "## Module Overview\n",
+    "\n",
+    "Detailed documentation for each module in the project:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bf6ae738",
+   "metadata": {},
+   "source": [
+    "### graph (`graph.ipynb`)\n",
+    "> Graph service for committing documents and segments to the context graph\n",
+    "\n",
+    "#### Import\n",
+    "\n",
+    "```python\n",
+    "from cjm_transcript_review.services.graph import (\n",
+    "    GraphService\n",
+    ")\n",
+    "```\n",
+    "#### Classes\n",
+    "\n",
+    "```python\n",
+    "class GraphService:\n",
+    "    def __init__(\n",
+    "        self,\n",
+    "        plugin_manager:PluginManager,  # Plugin manager for accessing graph plugin\n",
+    "        plugin_name:str=\"cjm-graph-plugin-sqlite\",  # Name of the graph plugin\n",
+    "    )\n",
+    "    \"Service for committing structure to context graph.\"\n",
+    "    \n",
+    "    def __init__(\n",
+    "            self,\n",
+    "            plugin_manager:PluginManager,  # Plugin manager for accessing graph plugin\n",
+    "            plugin_name:str=\"cjm-graph-plugin-sqlite\",  # Name of the graph plugin\n",
+    "        )\n",
+    "        \"Initialize the graph service.\"\n",
+    "    \n",
+    "    def is_available(self) -> bool:  # True if plugin is loaded and ready\n",
+    "            \"\"\"Check if the graph plugin is available.\"\"\"\n",
+    "            return self._manager.get_plugin(self._plugin_name) is not None\n",
+    "        \n",
+    "        def ensure_loaded(\n",
+    "            self,\n",
+    "            config:Optional[Dict[str, Any]]=None,  # Optional plugin configuration\n",
+    "        ) -> bool:  # True if successfully loaded\n",
+    "        \"Check if the graph plugin is available.\"\n",
+    "    \n",
+    "    def ensure_loaded(\n",
+    "            self,\n",
+    "            config:Optional[Dict[str, Any]]=None,  # Optional plugin configuration\n",
+    "        ) -> bool:  # True if successfully loaded\n",
+    "        \"Ensure the graph plugin is loaded.\"\n",
+    "    \n",
+    "    async def commit_document_async(\n",
+    "            self,\n",
+    "            title:str,  # Document title\n",
+    "            text_segments:List[TextSegment],  # Text segments from decomposition\n",
+    "            vad_chunks:List[VADChunk],  # VAD chunks for timing (1:1 with segments)\n",
+    "            media_type:str=\"audio\",  # Source media type\n",
+    "        ) -> Dict[str, Any]:  # Result with document_id and segment_ids\n",
+    "        \"Commit a document to the context graph.\n",
+    "\n",
+    "Assembles text segments with VAD timing at commit time.\n",
+    "Requires 1:1 alignment: len(text_segments) == len(vad_chunks).\"\n",
+    "    \n",
+    "    def commit_document(\n",
+    "            self,\n",
+    "            title:str,  # Document title\n",
+    "            text_segments:List[TextSegment],  # Text segments from decomposition\n",
+    "            vad_chunks:List[VADChunk],  # VAD chunks for timing\n",
+    "            media_type:str=\"audio\",  # Source media type\n",
+    "        ) -> Dict[str, Any]:  # Result with document_id and segment_ids\n",
+    "        \"Commit a document to the context graph synchronously.\"\n",
+    "```\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1d798c9d",
+   "metadata": {},
+   "source": [
+    "### html_ids (`html_ids.ipynb`)\n",
+    "> HTML ID constants for Phase 3: Review & Commit\n",
+    "\n",
+    "#### Import\n",
+    "\n",
+    "```python\n",
+    "from cjm_transcript_review.html_ids import (\n",
+    "    ReviewHtmlIds\n",
+    ")\n",
+    "```\n",
+    "#### Classes\n",
+    "\n",
+    "```python\n",
+    "class ReviewHtmlIds:\n",
+    "    \"HTML ID constants for Phase 3: Review & Commit.\"\n",
+    "    \n",
+    "    def as_selector(\n",
+    "            id_str:str  # The HTML ID to convert\n",
+    "        ) -> str:  # CSS selector with # prefix\n",
+    "        \"Convert an ID to a CSS selector format.\"\n",
+    "```\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "091f0239",
+   "metadata": {},
+   "source": [
+    "### models (`models.ipynb`)\n",
+    "> Review step state and working document model for Phase 3: Review & Commit\n",
+    "\n",
+    "#### Import\n",
+    "\n",
+    "```python\n",
+    "from cjm_transcript_review.models import (\n",
+    "    ReviewStepState,\n",
+    "    WorkingDocument\n",
+    ")\n",
+    "```\n",
+    "#### Classes\n",
+    "\n",
+    "```python\n",
+    "class ReviewStepState(TypedDict):\n",
+    "    \"State for Phase 3: Review & Commit.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "@dataclass\n",
+    "class WorkingDocument:\n",
+    "    \"Container for workflow state during structure decomposition.\"\n",
+    "    \n",
+    "    title: str = ''  # Document title\n",
+    "    media_type: str = 'audio'  # Source media type ('audio', 'video', 'text')\n",
+    "    media_path: Optional[str]  # Path to primary source media\n",
+    "    source_blocks: List[SourceBlock] = field(...)  # Ordered source blocks\n",
+    "    combined_text: str = ''  # Concatenated text from all sources\n",
+    "    segments: List[TextSegment] = field(...)  # Decomposed segments\n",
+    "    vad_chunks: List[VADChunk] = field(...)  # VAD time ranges\n",
+    "    audio_duration: Optional[float]  # Total audio duration in seconds\n",
+    "    \n",
+    "    def to_dict(self) -> Dict[str, Any]:  # Dictionary representation\n",
+    "            \"\"\"Convert to dictionary for JSON serialization.\"\"\"\n",
+    "            return {\n",
+    "                'title': self.title,\n",
+    "        \"Convert to dictionary for JSON serialization.\"\n",
+    "    \n",
+    "    def from_dict(\n",
+    "            cls,\n",
+    "            data: Dict[str, Any]  # Dictionary representation\n",
+    "        ) -> \"WorkingDocument\":  # Reconstructed WorkingDocument\n",
+    "        \"Create from dictionary.\"\n",
+    "```\n"
+   ]
   }
  ],
  "metadata": {
