Phase 2: Card Stack Foundation — review card display with card stack viewport, navigation routes, and demo app using real workflow state data.

--- a/nbs/models.ipynb
+++ b/nbs/models.ipynb
@@ -32,6 +32,7 @@
     "from typing_extensions import TypedDict\n",
     "from dataclasses import dataclass, field\n",
     "\n",
+    "from cjm_fasthtml_card_stack.core.models import CardStackUrls\n",
     "from cjm_source_provider.models import SourceBlock\n",
     "\n",
     "# Cross-package imports: primary owners are in page-specific packages\n",
@@ -62,7 +63,45 @@
     "    \n",
     "    document_title: str  # Final document title\n",
     "    validation_errors: List[str]  # List of validation issues\n",
-    "    is_validated: bool  # Whether document passed validation"
+    "    is_validated: bool  # Whether document passed validation\n",
+    "    \n",
+    "    # Card stack view state\n",
+    "    focused_index: int  # Currently focused segment index\n",
+    "    visible_count: int  # Number of visible cards in viewport\n",
+    "    is_auto_mode: bool  # Whether card count is in auto-adjust mode\n",
+    "    card_width: int  # Card stack width in rem units"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ubio953y899",
+   "metadata": {},
+   "source": [
+    "## ReviewUrls\n",
+    "\n",
+    "URL bundle for Phase 3 review route handlers and renderers."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a5hbqgj0c3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "@dataclass\n",
+    "class ReviewUrls:\n",
+    "    \"\"\"URL bundle for Phase 3 review route handlers and renderers.\"\"\"\n",
+    "    \n",
+    "    # Card stack navigation and viewport (from cjm-fasthtml-card-stack library)\n",
+    "    card_stack: CardStackUrls = field(default_factory=CardStackUrls)\n",
+    "    \n",
+    "    # Audio controls (Phase 3)\n",
+    "    audio_src: str = \"\"  # Audio source route\n",
+    "    \n",
+    "    # Commit (Phase 5)\n",
+    "    commit: str = \"\"  # Commit handler route"
    ]
   },
   {
