--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -24,17 +24,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d1592e70",
+   "id": "2a8875ad",
    "metadata": {},
    "source": [
     "## Project Structure\n",
     "\n",
     "```\n",
     "nbs/\n",
-    "├── components/ (5)\n",
-    "│   ├── callbacks.ipynb          # JavaScript callbacks for the review card stack\n",
+    "├── components/ (6)\n",
+    "│   ├── callbacks.ipynb          # Focus change callback and audio playback JavaScript for the review card stack\n",
     "│   ├── card_stack_config.ipynb  # Card stack configuration, HTML IDs, and button IDs for the review card stack\n",
     "│   ├── helpers.ipynb            # State getters for the review step from InteractionContext\n",
+    "│   ├── keyboard_config.ipynb    # Review-specific keyboard building blocks for assembly into a KeyboardManager\n",
     "│   ├── review_card.ipynb        # Review card component showing assembled segment with timing and source info\n",
     "│   └── step_renderer.ipynb      # Composable render functions for the review card stack step\n",
     "├── routes/ (3)\n",
@@ -48,12 +49,12 @@
     "└── utils.ipynb     # Time formatting and source info display utilities for review cards\n",
     "```\n",
     "\n",
-    "Total: 12 notebooks across 3 directories"
+    "Total: 13 notebooks across 3 directories"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "e8105b16",
+   "id": "afc5b00b",
    "metadata": {},
    "source": [
     "## Module Dependencies\n",
@@ -63,6 +64,7 @@
     "    components_callbacks[components.callbacks<br/>callbacks]\n",
     "    components_card_stack_config[components.card_stack_config<br/>card_stack_config]\n",
     "    components_helpers[components.helpers<br/>helpers]\n",
+    "    components_keyboard_config[components.keyboard_config<br/>keyboard_config]\n",
     "    components_review_card[components.review_card<br/>review_card]\n",
     "    components_step_renderer[components.step_renderer<br/>step_renderer]\n",
     "    html_ids[html_ids<br/>html_ids]\n",
@@ -76,19 +78,19 @@
     "    components_helpers --> models\n",
     "    components_review_card --> utils\n",
     "    components_review_card --> html_ids\n",
-    "    components_step_renderer --> components_callbacks\n",
-    "    components_step_renderer --> components_card_stack_config\n",
     "    components_step_renderer --> components_review_card\n",
-    "    components_step_renderer --> html_ids\n",
+    "    components_step_renderer --> components_card_stack_config\n",
     "    components_step_renderer --> models\n",
+    "    components_step_renderer --> html_ids\n",
+    "    components_step_renderer --> components_callbacks\n",
+    "    routes_card_stack --> components_review_card\n",
     "    routes_card_stack --> routes_core\n",
     "    routes_card_stack --> components_card_stack_config\n",
-    "    routes_card_stack --> components_review_card\n",
     "    routes_card_stack --> models\n",
-    "    routes_core --> components_review_card\n",
     "    routes_core --> models\n",
-    "    routes_init --> routes_core\n",
+    "    routes_core --> components_review_card\n",
     "    routes_init --> routes_card_stack\n",
+    "    routes_init --> routes_core\n",
     "    routes_init --> models\n",
     "```\n",
     "\n",
@@ -97,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bcb22b64",
+   "id": "0f5157b2",
    "metadata": {},
    "source": [
     "## CLI Reference\n",
@@ -107,7 +109,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c6036f09",
+   "id": "a427945e",
    "metadata": {},
    "source": [
     "## Module Overview\n",
@@ -117,11 +119,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "64feef88",
+   "id": "daf29973",
    "metadata": {},
    "source": [
     "### callbacks (`callbacks.ipynb`)\n",
-    "> JavaScript callbacks for the review card stack\n",
+    "> Focus change callback and audio playback JavaScript for the review card stack\n",
     "\n",
     "#### Import\n",
     "\n",
@@ -134,20 +136,31 @@
     "#### Functions\n",
     "\n",
     "```python\n",
+    "def _generate_review_focus_change_script(\n",
+    "    focus_input_id:str,  # ID of hidden input for focused segment index\n",
+    "    audio_player_id:str,  # ID of the hidden audio element (for src URL extraction)\n",
+    "    card_stack_id:str,  # ID of the review card stack container\n",
+    ") -> str:  # JavaScript for focus change with audio playback\n",
+    "    \"Generate JS for review focus change handling with Web Audio API playback.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
     "def generate_review_callbacks_script(\n",
     "    ids:CardStackHtmlIds,  # Card stack HTML IDs\n",
     "    button_ids:CardStackButtonIds,  # Card stack button IDs\n",
     "    config:CardStackConfig,  # Card stack configuration\n",
     "    urls:CardStackUrls,  # Card stack URL bundle\n",
     "    container_id:str,  # ID of the review container (parent of card stack)\n",
+    "    focus_input_id:str,  # ID of hidden input for focused segment index\n",
+    "    audio_player_id:str,  # ID of the hidden audio element\n",
     ") -> any:  # Script element with all JavaScript callbacks\n",
-    "    \"Generate JavaScript for review card stack.\"\n",
+    "    \"Generate JavaScript for review card stack with audio audition.\"\n",
     "```\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "656b5867",
+   "id": "df991927",
    "metadata": {},
    "source": [
     "### card_stack (`card_stack.ipynb`)\n",
@@ -227,7 +240,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c5f8399e",
+   "id": "335ec6a0",
    "metadata": {},
    "source": [
     "### card_stack_config (`card_stack_config.ipynb`)\n",
@@ -253,7 +266,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "21557d18",
+   "id": "558bd41e",
    "metadata": {},
    "source": [
     "### core (`core.ipynb`)\n",
@@ -352,7 +365,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c28d1c58",
+   "id": "bc53e9fd",
    "metadata": {},
    "source": [
     "### graph (`graph.ipynb`)\n",
@@ -424,7 +437,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dcab5fec",
+   "id": "5ce73f90",
    "metadata": {},
    "source": [
     "### helpers (`helpers.ipynb`)\n",
@@ -507,7 +520,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "002b8483",
+   "id": "4b122ad7",
    "metadata": {},
    "source": [
     "### html_ids (`html_ids.ipynb`)\n",
@@ -540,7 +553,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8dc7d438",
+   "id": "3bca8a07",
    "metadata": {},
    "source": [
     "### init (`init.ipynb`)\n",
@@ -569,7 +582,35 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dbf22075",
+   "id": "639407cc",
+   "metadata": {},
+   "source": [
+    "### keyboard_config (`keyboard_config.ipynb`)\n",
+    "> Review-specific keyboard building blocks for assembly into a KeyboardManager\n",
+    "\n",
+    "#### Import\n",
+    "\n",
+    "```python\n",
+    "from cjm_transcript_review.components.keyboard_config import (\n",
+    "    create_review_kb_parts\n",
+    ")\n",
+    "```\n",
+    "\n",
+    "#### Functions\n",
+    "\n",
+    "```python\n",
+    "def create_review_kb_parts(\n",
+    "    ids:CardStackHtmlIds,  # Card stack HTML IDs\n",
+    "    button_ids:CardStackButtonIds,  # Card stack button IDs for navigation\n",
+    "    config:CardStackConfig,  # Card stack configuration\n",
+    ") -> Tuple[FocusZone, tuple, tuple]:  # (zone, actions, modes)\n",
+    "    \"Create review-specific keyboard building blocks.\"\n",
+    "```\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9db65fe4",
    "metadata": {},
    "source": [
     "### models (`models.ipynb`)\n",
@@ -631,7 +672,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "48410070",
+   "id": "bf3a3782",
    "metadata": {},
    "source": [
     "### review_card (`review_card.ipynb`)\n",
@@ -708,7 +749,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ad47e1c4",
+   "id": "f923347e",
    "metadata": {},
    "source": [
     "### step_renderer (`step_renderer.ipynb`)\n",
@@ -754,6 +795,7 @@
     "    card_width:int,  # Card stack width in rem\n",
     "    urls:ReviewUrls,  # URL bundle for review routes\n",
     "    media_path:Optional[str]=None,  # Path to audio file for playback\n",
+    "    kb_system:Optional[Any]=None,  # Rendered keyboard system (None when KB managed externally)\n",
     ") -> Any:  # Main content area\n",
     "    \"Render the review content area with card stack viewport.\"\n",
     "```\n",
@@ -788,7 +830,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5ec1ca12",
+   "id": "e12402e5",
    "metadata": {},
    "source": [
     "### utils (`utils.ipynb`)\n",
