--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -24,21 +24,23 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2a8875ad",
+   "id": "48e1dd67",
    "metadata": {},
    "source": [
     "## Project Structure\n",
     "\n",
     "```\n",
     "nbs/\n",
-    "├── components/ (6)\n",
+    "├── components/ (7)\n",
+    "│   ├── audio_controls.ipynb     # Audio playback controls: speed selector and auto-navigate toggle\n",
     "│   ├── callbacks.ipynb          # Focus change callback and audio playback JavaScript for the review card stack\n",
     "│   ├── card_stack_config.ipynb  # Card stack configuration, HTML IDs, and button IDs for the review card stack\n",
     "│   ├── helpers.ipynb            # State getters for the review step from InteractionContext\n",
     "│   ├── keyboard_config.ipynb    # Review-specific keyboard building blocks for assembly into a KeyboardManager\n",
     "│   ├── review_card.ipynb        # Review card component showing assembled segment with timing and source info\n",
     "│   └── step_renderer.ipynb      # Composable render functions for the review card stack step\n",
-    "├── routes/ (3)\n",
+    "├── routes/ (4)\n",
+    "│   ├── audio.ipynb       # Route handlers for audio playback controls\n",
     "│   ├── card_stack.ipynb  # Card stack UI operations — navigation, viewport, and response builders\n",
     "│   ├── core.ipynb        # Review step state management helpers\n",
     "│   └── init.ipynb        # Router assembly for Phase 3 review routes\n",
@@ -49,18 +51,19 @@
     "└── utils.ipynb     # Time formatting and source info display utilities for review cards\n",
     "```\n",
     "\n",
-    "Total: 13 notebooks across 3 directories"
+    "Total: 15 notebooks across 3 directories"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "afc5b00b",
+   "id": "257e5fae",
    "metadata": {},
    "source": [
     "## Module Dependencies\n",
     "\n",
     "```mermaid\n",
     "graph LR\n",
+    "    components_audio_controls[components.audio_controls<br/>audio_controls]\n",
     "    components_callbacks[components.callbacks<br/>callbacks]\n",
     "    components_card_stack_config[components.card_stack_config<br/>card_stack_config]\n",
     "    components_helpers[components.helpers<br/>helpers]\n",
@@ -69,6 +72,7 @@
     "    components_step_renderer[components.step_renderer<br/>step_renderer]\n",
     "    html_ids[html_ids<br/>html_ids]\n",
     "    models[models<br/>models]\n",
+    "    routes_audio[routes.audio<br/>audio]\n",
     "    routes_card_stack[routes.card_stack<br/>card_stack]\n",
     "    routes_core[routes.core<br/>core]\n",
     "    routes_init[routes.init<br/>init]\n",
@@ -78,28 +82,32 @@
     "    components_helpers --> models\n",
     "    components_review_card --> utils\n",
     "    components_review_card --> html_ids\n",
-    "    components_step_renderer --> components_review_card\n",
     "    components_step_renderer --> components_card_stack_config\n",
+    "    components_step_renderer --> components_callbacks\n",
+    "    components_step_renderer --> components_audio_controls\n",
+    "    components_step_renderer --> components_review_card\n",
     "    components_step_renderer --> models\n",
     "    components_step_renderer --> html_ids\n",
-    "    components_step_renderer --> components_callbacks\n",
-    "    routes_card_stack --> components_review_card\n",
+    "    routes_audio --> routes_core\n",
+    "    routes_audio --> models\n",
     "    routes_card_stack --> routes_core\n",
     "    routes_card_stack --> components_card_stack_config\n",
+    "    routes_card_stack --> components_review_card\n",
     "    routes_card_stack --> models\n",
-    "    routes_core --> models\n",
     "    routes_core --> components_review_card\n",
-    "    routes_init --> routes_card_stack\n",
+    "    routes_core --> models\n",
+    "    routes_init --> routes_audio\n",
     "    routes_init --> routes_core\n",
     "    routes_init --> models\n",
+    "    routes_init --> routes_card_stack\n",
     "```\n",
     "\n",
-    "*17 cross-module dependencies detected*"
+    "*21 cross-module dependencies detected*"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "0f5157b2",
+   "id": "a348f738",
    "metadata": {},
    "source": [
     "## CLI Reference\n",
@@ -109,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a427945e",
+   "id": "1cd19f3c",
    "metadata": {},
    "source": [
     "## Module Overview\n",
@@ -119,7 +127,125 @@
   },
   {
    "cell_type": "markdown",
-   "id": "daf29973",
+   "id": "9562d947",
+   "metadata": {},
+   "source": [
+    "### audio (`audio.ipynb`)\n",
+    "> Route handlers for audio playback controls\n",
+    "\n",
+    "#### Import\n",
+    "\n",
+    "```python\n",
+    "from cjm_transcript_review.routes.audio import (\n",
+    "    DEBUG_AUDIO_ROUTES,\n",
+    "    init_audio_router\n",
+    ")\n",
+    "```\n",
+    "\n",
+    "#### Functions\n",
+    "\n",
+    "```python\n",
+    "def _generate_speed_change_js(\n",
+    "    speed:float  # New playback speed\n",
+    ") -> str:  # JavaScript to update playback rate\n",
+    "    \"Generate JS to update Web Audio API playback rate.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def _generate_auto_nav_js(\n",
+    "    enabled:bool  # Whether auto-navigate is enabled\n",
+    ") -> str:  # JavaScript to update auto-navigate flag\n",
+    "    \"Generate JS to update auto-navigate client-side flag.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def _generate_replay_js() -> str:  # JavaScript to replay current segment\n",
+    "    \"Generate JS to replay the current segment's audio.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def init_audio_router(\n",
+    "    state_store:WorkflowStateStore,  # The workflow state store\n",
+    "    workflow_id:str,  # The workflow identifier\n",
+    "    prefix:str,  # Base prefix for audio routes\n",
+    "    urls:ReviewUrls,  # URL bundle to populate\n",
+    ") -> Tuple[APIRouter, Dict[str, Callable]]:  # (router, routes dict)\n",
+    "    \"Initialize audio control routes.\"\n",
+    "```\n",
+    "\n",
+    "#### Variables\n",
+    "\n",
+    "```python\n",
+    "DEBUG_AUDIO_ROUTES = False\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "398ee00c",
+   "metadata": {},
+   "source": [
+    "### audio_controls (`audio_controls.ipynb`)\n",
+    "> Audio playback controls: speed selector and auto-navigate toggle\n",
+    "\n",
+    "#### Import\n",
+    "\n",
+    "```python\n",
+    "from cjm_transcript_review.components.audio_controls import (\n",
+    "    PLAYBACK_SPEEDS,\n",
+    "    AudioControlIds,\n",
+    "    render_speed_selector,\n",
+    "    render_auto_navigate_toggle,\n",
+    "    render_audio_controls\n",
+    ")\n",
+    "```\n",
+    "\n",
+    "#### Functions\n",
+    "\n",
+    "```python\n",
+    "def render_speed_selector(\n",
+    "    current_speed:float=1.0,  # Current playback speed\n",
+    "    change_url:str=\"\",  # URL to POST speed changes to\n",
+    ") -> Any:  # Speed selector component\n",
+    "    \"Render playback speed selector dropdown.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def render_auto_navigate_toggle(\n",
+    "    enabled:bool=False,  # Whether auto-navigate is enabled\n",
+    "    toggle_url:str=\"\",  # URL to POST toggle changes to\n",
+    ") -> Any:  # Auto-navigate toggle component\n",
+    "    \"Render auto-navigate toggle switch.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def render_audio_controls(\n",
+    "    current_speed:float=1.0,  # Current playback speed\n",
+    "    auto_navigate:bool=False,  # Whether auto-navigate is enabled\n",
+    "    speed_url:str=\"\",  # URL for speed changes\n",
+    "    auto_nav_url:str=\"\",  # URL for auto-navigate toggle\n",
+    "    oob:bool=False,  # Whether to render as OOB swap\n",
+    ") -> Any:  # Combined audio controls component\n",
+    "    \"Render combined audio controls (speed selector + auto-navigate toggle).\"\n",
+    "```\n",
+    "\n",
+    "#### Classes\n",
+    "\n",
+    "```python\n",
+    "class AudioControlIds:\n",
+    "    \"HTML ID constants for audio control elements.\"\n",
+    "```\n",
+    "\n",
+    "#### Variables\n",
+    "\n",
+    "```python\n",
+    "PLAYBACK_SPEEDS: List[tuple]\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5fced4b0",
    "metadata": {},
    "source": [
     "### callbacks (`callbacks.ipynb`)\n",
@@ -140,6 +266,7 @@
     "    focus_input_id:str,  # ID of hidden input for focused segment index\n",
     "    audio_player_id:str,  # ID of the hidden audio element (for src URL extraction)\n",
     "    card_stack_id:str,  # ID of the review card stack container\n",
+    "    nav_down_btn_id:str,  # ID of nav_down button for auto-navigate\n",
     ") -> str:  # JavaScript for focus change with audio playback\n",
     "    \"Generate JS for review focus change handling with Web Audio API playback.\"\n",
     "```\n",
@@ -160,7 +287,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "df991927",
+   "id": "e09f9f94",
    "metadata": {},
    "source": [
     "### card_stack (`card_stack.ipynb`)\n",
@@ -240,7 +367,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "335ec6a0",
+   "id": "4891c8a2",
    "metadata": {},
    "source": [
     "### card_stack_config (`card_stack_config.ipynb`)\n",
@@ -266,7 +393,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "558bd41e",
+   "id": "30db0f4d",
    "metadata": {},
    "source": [
     "### core (`core.ipynb`)\n",
@@ -338,6 +465,8 @@
     "    card_width:int=None,  # Card stack width in rem (None = don't change)\n",
     "    document_title:str=None,  # Document title (None = don't change)\n",
     "    is_validated:bool=None,  # Validation flag (None = don't change)\n",
+    "    playback_speed:float=None,  # Playback speed (None = don't change)\n",
+    "    auto_navigate:bool=None,  # Auto-navigate flag (None = don't change)\n",
     ") -> None\n",
     "    \"Update the review step state in the workflow state store.\"\n",
     "```\n",
@@ -365,7 +494,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bc53e9fd",
+   "id": "6c99333b",
    "metadata": {},
    "source": [
     "### graph (`graph.ipynb`)\n",
@@ -437,7 +566,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5ce73f90",
+   "id": "8ef981de",
    "metadata": {},
    "source": [
     "### helpers (`helpers.ipynb`)\n",
@@ -520,7 +649,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b122ad7",
+   "id": "0f27a206",
    "metadata": {},
    "source": [
     "### html_ids (`html_ids.ipynb`)\n",
@@ -553,7 +682,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3bca8a07",
+   "id": "e81d2ef6",
    "metadata": {},
    "source": [
     "### init (`init.ipynb`)\n",
@@ -582,7 +711,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "639407cc",
+   "id": "22956721",
    "metadata": {},
    "source": [
     "### keyboard_config (`keyboard_config.ipynb`)\n",
@@ -610,7 +739,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9db65fe4",
+   "id": "f8c48100",
    "metadata": {},
    "source": [
     "### models (`models.ipynb`)\n",
@@ -639,6 +768,9 @@
     "    \n",
     "    card_stack: CardStackUrls = field(...)\n",
     "    audio_src: str = ''  # Audio source route\n",
+    "    speed_change: str = ''  # Playback speed change handler\n",
+    "    toggle_auto_nav: str = ''  # Auto-navigate toggle handler\n",
+    "    replay_current: str = ''  # Replay current segment handler\n",
     "    commit: str = ''  # Commit handler route\n",
     "```\n",
     "\n",
@@ -672,7 +804,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bf3a3782",
+   "id": "4bcb4b98",
    "metadata": {},
    "source": [
     "### review_card (`review_card.ipynb`)\n",
@@ -749,7 +881,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f923347e",
+   "id": "cdcf2376",
    "metadata": {},
    "source": [
     "### step_renderer (`step_renderer.ipynb`)\n",
@@ -774,9 +906,12 @@
     "def render_review_toolbar(\n",
     "    visible_count:int=DEFAULT_VISIBLE_COUNT,  # Current visible card count\n",
     "    is_auto_mode:bool=False,  # Whether card count is in auto-adjust mode\n",
+    "    playback_speed:float=1.0,  # Current playback speed\n",
+    "    auto_navigate:bool=False,  # Whether auto-navigate is enabled\n",
+    "    urls:ReviewUrls=None,  # URL bundle for audio control routes\n",
     "    oob:bool=False,  # Whether to render as OOB swap\n",
     ") -> Any:  # Toolbar component\n",
-    "    \"Render the review toolbar with card count selector.\"\n",
+    "    \"Render the review toolbar with audio controls and card count selector.\"\n",
     "```\n",
     "\n",
     "```python\n",
@@ -815,8 +950,11 @@
     "    visible_count:int=DEFAULT_VISIBLE_COUNT,  # Number of visible cards\n",
     "    is_auto_mode:bool=False,  # Whether card count is in auto-adjust mode\n",
     "    card_width:int=DEFAULT_CARD_WIDTH,  # Card stack width in rem\n",
+    "    playback_speed:float=1.0,  # Current playback speed\n",
+    "    auto_navigate:bool=False,  # Whether auto-navigate is enabled\n",
     "    urls:ReviewUrls=None,  # URL bundle for review routes\n",
     "    media_path:Optional[str]=None,  # Path to audio file for playback\n",
+    "    kb_system:Optional[Any]=None,  # Rendered keyboard system (optional)\n",
     ") -> Any:  # Complete review step component\n",
     "    \"Render the complete review step with toolbar, content, and footer.\"\n",
     "```\n",
@@ -830,7 +968,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e12402e5",
+   "id": "211bb94e",
    "metadata": {},
    "source": [
     "### utils (`utils.ipynb`)\n",
