--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "26ff523e",
+   "id": "5107821f",
    "metadata": {},
    "source": [
     "## Project Structure\n",
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ba94937",
+   "id": "0380870f",
    "metadata": {},
    "source": [
     "## Module Dependencies\n",
@@ -85,36 +85,37 @@
     "    components_review_card --> utils\n",
     "    components_review_card --> html_ids\n",
     "    components_step_renderer --> components_card_stack_config\n",
-    "    components_step_renderer --> components_review_card\n",
-    "    components_step_renderer --> models\n",
-    "    components_step_renderer --> html_ids\n",
     "    components_step_renderer --> components_audio_controls\n",
+    "    components_step_renderer --> components_review_card\n",
+    "    components_step_renderer --> html_ids\n",
+    "    components_step_renderer --> models\n",
     "    components_step_renderer --> components_callbacks\n",
-    "    routes_audio --> routes_core\n",
+    "    components_step_renderer --> components_keyboard_config\n",
     "    routes_audio --> models\n",
+    "    routes_audio --> routes_core\n",
     "    routes_card_stack --> components_card_stack_config\n",
     "    routes_card_stack --> components_review_card\n",
-    "    routes_card_stack --> routes_core\n",
     "    routes_card_stack --> models\n",
+    "    routes_card_stack --> routes_core\n",
     "    routes_commit --> models\n",
-    "    routes_commit --> routes_core\n",
     "    routes_commit --> services_graph\n",
-    "    routes_core --> components_review_card\n",
+    "    routes_commit --> routes_core\n",
     "    routes_core --> models\n",
-    "    routes_init --> routes_audio\n",
-    "    routes_init --> routes_card_stack\n",
+    "    routes_core --> components_review_card\n",
     "    routes_init --> models\n",
-    "    routes_init --> routes_core\n",
     "    routes_init --> services_graph\n",
     "    routes_init --> routes_commit\n",
+    "    routes_init --> routes_audio\n",
+    "    routes_init --> routes_card_stack\n",
+    "    routes_init --> routes_core\n",
     "```\n",
     "\n",
-    "*26 cross-module dependencies detected*"
+    "*27 cross-module dependencies detected*"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "ddcf3bcd",
+   "id": "ef22a786",
    "metadata": {},
    "source": [
     "## CLI Reference\n",
@@ -124,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6707f304",
+   "id": "5b2e62d2",
    "metadata": {},
    "source": [
     "## Module Overview\n",
@@ -134,7 +135,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1740983c",
+   "id": "1b1fb0f9",
    "metadata": {},
    "source": [
     "### audio (`audio.ipynb`)\n",
@@ -189,7 +190,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d361812c",
+   "id": "3d927ed6",
    "metadata": {},
    "source": [
     "### audio_controls (`audio_controls.ipynb`)\n",
@@ -252,7 +253,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a3354187",
+   "id": "e351505b",
    "metadata": {},
    "source": [
     "### callbacks (`callbacks.ipynb`)\n",
@@ -294,7 +295,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3c42a3ba",
+   "id": "ed74123d",
    "metadata": {},
    "source": [
     "### card_stack (`card_stack.ipynb`)\n",
@@ -374,7 +375,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e5d86910",
+   "id": "cf3b9471",
    "metadata": {},
    "source": [
     "### card_stack_config (`card_stack_config.ipynb`)\n",
@@ -400,7 +401,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "612fa70a",
+   "id": "8184be6a",
    "metadata": {},
    "source": [
     "### commit (`commit.ipynb`)\n",
@@ -474,7 +475,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ab92a89b",
+   "id": "662fec54",
    "metadata": {},
    "source": [
     "### core (`core.ipynb`)\n",
@@ -575,7 +576,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6dfbc999",
+   "id": "2462709a",
    "metadata": {},
    "source": [
     "### graph (`graph.ipynb`)\n",
@@ -647,7 +648,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d820a444",
+   "id": "fef56469",
    "metadata": {},
    "source": [
     "### helpers (`helpers.ipynb`)\n",
@@ -730,7 +731,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a2f439fb",
+   "id": "fa693663",
    "metadata": {},
    "source": [
     "### html_ids (`html_ids.ipynb`)\n",
@@ -763,7 +764,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fbcf5050",
+   "id": "0e00bd0c",
    "metadata": {},
    "source": [
     "### init (`init.ipynb`)\n",
@@ -794,7 +795,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "07c30fe0",
+   "id": "7c5743ba",
    "metadata": {},
    "source": [
     "### keyboard_config (`keyboard_config.ipynb`)\n",
@@ -804,7 +805,8 @@
     "\n",
     "```python\n",
     "from cjm_transcript_review.components.keyboard_config import (\n",
-    "    create_review_kb_parts\n",
+    "    create_review_kb_parts,\n",
+    "    create_review_keyboard_manager\n",
     ")\n",
     "```\n",
     "\n",
@@ -817,12 +819,21 @@
     "    config:CardStackConfig,  # Card stack configuration\n",
     ") -> Tuple[FocusZone, tuple, tuple]:  # (zone, actions, modes)\n",
     "    \"Create review-specific keyboard building blocks.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def create_review_keyboard_manager(\n",
+    "    ids:CardStackHtmlIds,  # Card stack HTML IDs\n",
+    "    button_ids:CardStackButtonIds,  # Card stack button IDs for navigation\n",
+    "    config:CardStackConfig,  # Card stack configuration\n",
+    ") -> ZoneManager:  # Configured keyboard zone manager\n",
+    "    \"Create the keyboard zone manager for the review step.\"\n",
     "```\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "6358baab",
+   "id": "de96ef18",
    "metadata": {},
    "source": [
     "### models (`models.ipynb`)\n",
@@ -887,7 +898,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "09e0259c",
+   "id": "1fcd38b8",
    "metadata": {},
    "source": [
     "### review_card (`review_card.ipynb`)\n",
@@ -964,7 +975,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9eef9dff",
+   "id": "654b01df",
    "metadata": {},
    "source": [
     "### step_renderer (`step_renderer.ipynb`)\n",
@@ -977,6 +988,7 @@
     "    DEBUG_REVIEW_RENDER,\n",
     "    render_review_toolbar,\n",
     "    render_review_stats,\n",
+    "    render_review_keyboard_hints,\n",
     "    render_review_content,\n",
     "    render_review_footer,\n",
     "    render_review_step\n",
@@ -1006,6 +1018,13 @@
     "```\n",
     "\n",
     "```python\n",
+    "def render_review_keyboard_hints(\n",
+    "    oob:bool=False,  # Whether to render as OOB swap\n",
+    ") -> Any:  # Collapsible keyboard hints component\n",
+    "    \"Render keyboard shortcut hints in a collapsible container.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
     "def render_review_content(\n",
     "    assembled:List[AssembledSegment],  # Assembled segments to display\n",
     "    focused_index:int,  # Currently focused segment index\n",
@@ -1013,9 +1032,8 @@
     "    card_width:int,  # Card stack width in rem\n",
     "    urls:ReviewUrls,  # URL bundle for review routes\n",
     "    media_path:Optional[str]=None,  # Path to audio file for playback\n",
-    "    kb_system:Optional[Any]=None,  # Rendered keyboard system (None when KB managed externally)\n",
     ") -> Any:  # Main content area\n",
-    "    \"Render the review content area with card stack viewport.\"\n",
+    "    \"Render the review content area with card stack viewport and keyboard system.\"\n",
     "```\n",
     "\n",
     "```python\n",
@@ -1037,7 +1055,6 @@
     "    auto_navigate:bool=False,  # Whether auto-navigate is enabled\n",
     "    urls:ReviewUrls=None,  # URL bundle for review routes\n",
     "    media_path:Optional[str]=None,  # Path to audio file for playback\n",
-    "    kb_system:Optional[Any]=None,  # Rendered keyboard system (optional)\n",
     ") -> Any:  # Complete review step component\n",
     "    \"Render the complete review step with toolbar, content, and footer.\"\n",
     "```\n",
@@ -1051,7 +1068,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd3fef0c",
+   "id": "7ffb24a4",
    "metadata": {},
    "source": [
     "### utils (`utils.ipynb`)\n",
