Add Document title editing support.

--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c20526a6",
+   "id": "f7f435e9",
    "metadata": {},
    "source": [
     "## Project Structure\n",
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "43ed6a5d",
+   "id": "46143942",
    "metadata": {},
    "source": [
     "## Module Dependencies\n",
@@ -82,34 +82,34 @@
     "    utils[utils<br/>utils]\n",
     "\n",
     "    components_helpers --> models\n",
-    "    components_review_card --> utils\n",
     "    components_review_card --> html_ids\n",
-    "    components_step_renderer --> components_keyboard_config\n",
-    "    components_step_renderer --> components_audio_controls\n",
-    "    components_step_renderer --> components_callbacks\n",
-    "    components_step_renderer --> components_review_card\n",
-    "    components_step_renderer --> components_card_stack_config\n",
+    "    components_review_card --> utils\n",
     "    components_step_renderer --> models\n",
     "    components_step_renderer --> html_ids\n",
+    "    components_step_renderer --> components_callbacks\n",
+    "    components_step_renderer --> components_keyboard_config\n",
+    "    components_step_renderer --> components_audio_controls\n",
+    "    components_step_renderer --> components_review_card\n",
+    "    components_step_renderer --> components_card_stack_config\n",
     "    routes_audio --> models\n",
     "    routes_audio --> routes_core\n",
     "    routes_card_stack --> routes_core\n",
+    "    routes_card_stack --> models\n",
+    "    routes_card_stack --> components_step_renderer\n",
     "    routes_card_stack --> components_review_card\n",
     "    routes_card_stack --> components_card_stack_config\n",
-    "    routes_card_stack --> components_step_renderer\n",
-    "    routes_card_stack --> models\n",
     "    routes_commit --> services_graph\n",
+    "    routes_commit --> models\n",
     "    routes_commit --> routes_core\n",
     "    routes_commit --> utils\n",
-    "    routes_commit --> models\n",
-    "    routes_core --> components_review_card\n",
     "    routes_core --> models\n",
-    "    routes_init --> routes_card_stack\n",
-    "    routes_init --> routes_audio\n",
-    "    routes_init --> services_graph\n",
+    "    routes_core --> components_review_card\n",
     "    routes_init --> models\n",
-    "    routes_init --> routes_core\n",
+    "    routes_init --> routes_audio\n",
     "    routes_init --> routes_commit\n",
+    "    routes_init --> services_graph\n",
+    "    routes_init --> routes_core\n",
+    "    routes_init --> routes_card_stack\n",
     "```\n",
     "\n",
     "*29 cross-module dependencies detected*"
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5455cf6c",
+   "id": "2afa1dfc",
    "metadata": {},
    "source": [
     "## CLI Reference\n",
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "313b6e84",
+   "id": "1947dd8f",
    "metadata": {},
    "source": [
     "## Module Overview\n",
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6ae2a2e5",
+   "id": "56a3b800",
    "metadata": {},
    "source": [
     "### audio (`audio.ipynb`)\n",
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6f88ba40",
+   "id": "2811e366",
    "metadata": {},
    "source": [
     "### audio_controls (`audio_controls.ipynb`)\n",
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3e20b17d",
+   "id": "167172bb",
    "metadata": {},
    "source": [
     "### callbacks (`callbacks.ipynb`)\n",
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b63724ce",
+   "id": "6e421277",
    "metadata": {},
    "source": [
     "### card_stack (`card_stack.ipynb`)\n",
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "529bf815",
+   "id": "d5a30a50",
    "metadata": {},
    "source": [
     "### card_stack_config (`card_stack_config.ipynb`)\n",
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a843c1b1",
+   "id": "bdf0f2fd",
    "metadata": {},
    "source": [
     "### commit (`commit.ipynb`)\n",
@@ -473,7 +473,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ba44ac2d",
+   "id": "a72624c4",
    "metadata": {},
    "source": [
     "### core (`core.ipynb`)\n",
@@ -552,6 +552,16 @@
     "```\n",
     "\n",
     "```python\n",
+    "def _handle_update_title(\n",
+    "    state_store:WorkflowStateStore,  # The workflow state store\n",
+    "    workflow_id:str,  # The workflow identifier\n",
+    "    session_id:str,  # Session identifier string\n",
+    "    document_title:str,  # New document title from form input\n",
+    ") -> None\n",
+    "    \"Update the document title in review state.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
     "def _build_card_stack_state(\n",
     "    ctx:ReviewContext,  # Loaded review context\n",
     ") -> CardStackState:  # Card stack state for library functions\n",
@@ -574,7 +584,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9ba88b7b",
+   "id": "556b83c4",
    "metadata": {},
    "source": [
     "### graph (`graph.ipynb`)\n",
@@ -646,7 +656,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fd0bdb37",
+   "id": "b9f8cd1a",
    "metadata": {},
    "source": [
     "### helpers (`helpers.ipynb`)\n",
@@ -729,7 +739,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef990b00",
+   "id": "52b8dc2f",
    "metadata": {},
    "source": [
     "### html_ids (`html_ids.ipynb`)\n",
@@ -762,7 +772,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f19518e0",
+   "id": "8999864c",
    "metadata": {},
    "source": [
     "### init (`init.ipynb`)\n",
@@ -793,7 +803,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "27dea20a",
+   "id": "fe960bd4",
    "metadata": {},
    "source": [
     "### keyboard_config (`keyboard_config.ipynb`)\n",
@@ -831,7 +841,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fbbee0a4",
+   "id": "b17d1e99",
    "metadata": {},
    "source": [
     "### models (`models.ipynb`)\n",
@@ -863,6 +873,7 @@
     "    speed_change: str = ''  # Playback speed change handler\n",
     "    toggle_auto_nav: str = ''  # Auto-navigate toggle handler\n",
     "    replay_current: str = ''  # Replay current segment handler\n",
+    "    update_title: str = ''  # Document title update handler\n",
     "    commit: str = ''  # Commit handler route\n",
     "```\n",
     "\n",
@@ -896,7 +907,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fecb1464",
+   "id": "ee8502f9",
    "metadata": {},
    "source": [
     "### review_card (`review_card.ipynb`)\n",
@@ -972,7 +983,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5e9a202d",
+   "id": "53d26aeb",
    "metadata": {},
    "source": [
     "### step_renderer (`step_renderer.ipynb`)\n",
@@ -1001,10 +1012,11 @@
     "    is_auto_mode:bool=False,  # Whether card count is in auto-adjust mode\n",
     "    playback_speed:float=1.0,  # Current playback speed\n",
     "    auto_navigate:bool=False,  # Whether auto-navigate is enabled\n",
+    "    document_title:str=\"\",  # Current document title\n",
     "    urls:ReviewUrls=None,  # URL bundle for audio control routes\n",
     "    oob:bool=False,  # Whether to render as OOB swap\n",
     ") -> Any:  # Toolbar component\n",
-    "    \"Render the review toolbar with audio controls and card count selector.\"\n",
+    "    \"Render the review toolbar with title input, audio controls, and card count selector.\"\n",
     "```\n",
     "\n",
     "```python\n",
@@ -1060,6 +1072,7 @@
     "    card_width:int=DEFAULT_CARD_WIDTH,  # Card stack width in rem\n",
     "    playback_speed:float=1.0,  # Current playback speed\n",
     "    auto_navigate:bool=False,  # Whether auto-navigate is enabled\n",
+    "    document_title:str=\"\",  # Current document title\n",
     "    urls:ReviewUrls=None,  # URL bundle for review routes\n",
     "    audio_urls:Optional[List[str]]=None,  # Audio file URLs for Web Audio API\n",
     ") -> Any:  # Complete review step component\n",
@@ -1075,7 +1088,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "59716c1c",
+   "id": "91f4cf3c",
    "metadata": {},
    "source": [
     "### utils (`utils.ipynb`)\n",
